# waluigi

./: .env  .gitignore  .gitignore.swp  ACCUMULATE_DEDUPLICATE_PROPOSAL.md  BACKLOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.boss  Dockerfile.bossd  Dockerfile.catalog  Dockerfile.console  Dockerfile.worker  Dockerfile.workerd  README.md  WALUIGI_BUILTIN_PROPOSAL.md  catalog.json  clean-from-swarm.sh  clean.sh  create-docker-images.sh  deploy-to-swarm-pg.sh  deploy-to-swarm.sh  docker-compose.pg.yml  docker-compose.yml  job.py  logging.yaml  pyproject.toml  release-skill.sh  submit.sh  test.db  test2.py  test_catalog.db  waluigi.db  waluigi.db-shm  waluigi.db-wal
.claude-plugin/: marketplace.json
.dodge/: .history
descriptors/: aggregate.yaml  analytics.yaml  analytics_orig.yaml  analytics_v2.yaml  catalog_create_dataset.yaml  catalog_create_source.yaml  catalog_define_schema.yaml  catalog_produce_test_dataset.yaml  catalog_set_charts.yaml  catalog_set_expectations.yaml  catalog_setup.yaml  dag2.yaml  deduplicate.yaml  derived.yaml  filter.yaml  job2.yml  job4.yml  join.yaml  merge.yaml  pipeline_flat.yaml  pipeline_v2.yaml  pivot.yaml  resources.yaml  sales.yaml  sales_pd.yaml  sales_v2.yaml  select.yaml  simulation.yaml  simulation_v2.txt  test_aggregate.yaml  test_deduplicate.yaml  test_pivot.yaml  typed_tasks_example.yaml  unpivot.yaml
doc/: architecture.md  built-in-tasks.md  catalog.md  cli.md  data-quality.md  deployment.md  sdk.md  task-development.md  yaml-reference.md
kubernetes/: waluigi-boss.yaml  waluigi-catalog.yaml  waluigi-console.yaml  waluigi-postgres.yaml  waluigi-worker.yaml
rules/: expect_cf_birthdate_coherence.yaml  expect_column_mean_to_be_between.yaml  expect_column_pair_values_a_to_be_greater_than_b.yaml  expect_column_value_lengths_to_be_between.yaml  expect_column_values_to_be_between.yaml  expect_column_values_to_be_in_another_dataset.yaml  expect_column_values_to_be_in_set.yaml  expect_column_values_to_be_of_type.yaml  expect_column_values_to_be_unique.yaml  expect_column_values_to_match_regex.yaml  expect_column_values_to_not_be_null.yaml  expect_compound_columns_to_be_unique.yaml
source/: fetch_http.py
static/: index.html
tests/: cf_test.py  cf_test.yaml  conftest.py  describe_rule_test.py
waluigi/: boss.py  boss2d.py  bossd.py  bossfa.py  catalog.py  catalog_old.py  catalog_v2.py  cli.py  console.py  console_old.py  (+3 more)
(+424 files in other folders)
