[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waluigi"
version = "0.1.0"
dependencies = [
    "tabulate",
    "ConfigArgParse",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "httpx",
    "pandas",
    "pyarrow",
    "boto3",
    "sqlalchemy",
    "psycopg2-binary",
    "croniter",
    "tzdata",
    "openpyxl",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["waluigi*"]
namespaces = true

[tool.setuptools.package-data]
"waluigi.console" = ["static/**/*", "static/*"]
"waluigi.tasks.data" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
wlctl = "waluigi.cli.__main__:main"
wlrun = "waluigi.cli.run_main:main"
wlboss = "waluigi.boss.__main__:main"
wlworker = "waluigi.worker.__main__:main"
wlcatalog = "waluigi.catalog.__main__:main"
wlconsole = "waluigi.console.__main__:main"


